--- a/chine.html
+++ b/chine.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="fr" lang="fr">
 <head>
 	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-	<title>Comparatif</title>
+	<title>Chine</title>
 	
 	<link rel="stylesheet" href="style.css" type="text/css" media="screen" />
 </head>
@@ -11,7 +11,7 @@
 <div id="container">
 	<div id="header">
 		<h1>
-			Site name
+Chine
 		</h1>
 	</div>
 <!--	<div id="navigation">
@@ -36,9 +36,9 @@
 		
 	</div>
 	
-	<div class="element">
+	<div class="element"> <!-- Mariannne -->
 		<h2>
-			Article 1 !!
+Marianne
 		</h2>
 		<img src="ecu.jpg" alt="Ecureuil">
 		<p>
@@ -48,7 +48,7 @@
 		</h3>
 	</div>
 
-	<div class="element">
+	<div class="element"> <!-- Angele -->
 		<h2>
 			Article 2 !!
 		</h2>
@@ -58,7 +58,7 @@
 		<h3>Source : <a href="#">blabla</a>
 		</h3>
 	</div>
-	<div class="element">
+	<div class="element"> <!-- Julie -->
 		<h2>
 			Article 3 !!
 		</h2>
@@ -71,7 +71,7 @@
 
 		
 	
-	<div class="element">
+	<div class="element"> <!-- Caroline -->
 		<h2>
 			Article 4 !!
 		</h2>
@@ -82,7 +82,7 @@
 		</h3>
 	</div>
 
-	<div class="element">
+	<div class="element"> <!-- Cecile -->
 		<h2>
 			Article 5 !!
 		</h2>
@@ -92,7 +92,19 @@
 		<h3>Source : <a href="#">blabla</a>
 		</h3>
 	</div>
-	<div class="element">
+
+	<div class="element"> <!-- Margaux -->
+		<h2>
+			Article 5 !!
+		</h2>
+		<p>
+			Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.
+		</p>
+		<h3>Source : <a href="#">blabla</a>
+		</h3>
+	</div>
+
+	<div class="element"> <!-- Eva -->
 		<h2>
 			Article 6 !!
 		</h2>
