Ajout article et image bouddhiste

--- a/inde.html
+++ b/inde.html
@@ -50,12 +50,25 @@
 
 	<div class="element">
 		<h2>
-			Article 2 !! //Bastien
+			L'origine du bouddhisme
 		</h2>
+		<img src ="./bouddhiste.jpg"/>
 		<p>
-			Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.
+			L'origine du bouddhisme remonte à Siddharta Gautama, fils du roi Shuddhodana et de la reine Maya, qui vit le jour vers 480 av JC à Lumbini sur les contreforts de l'Himalaya. Vers l'âge de 30 ans alors qu'il était marié, il renonce a sa vie de privilégié pour vivre une vie errante. Durant cette errance, il constata la douloureuse condition humaine. Insatisfait aux réponses données par l'hindouisme à sa quête pour se libérer de la souffrance, il entreprend une longue méditation. C'est en méditant sous un arbre à Bodh Gaya, qu'il eu une illumination et qu'il atteint l'éveil (bodhi), parvenu à cet état, il eut la connaissance du dharma (la vérité) et sut alors comment se libérer des cycles des renaissances et accéder au nirvana, la libération suprême. Il devint un Bouddha (ce qui signifie l'éveillé).
+
+Il se rendit à Sarnath près de Varanasi où il prononça son premier sermon (sutra) connu sous le nom "Discours sur la mise en mouvement de la roue du dharma". Il énonça les "Quatre Nobles Vérités" :
+
+- Constatation que le monde n'est que souffrance (perte d'un être cher, d'un objet,...) ;
+
+- L'origine de la souffrance qui réside dans les désirs et attachements terrestres ;
+
+- La cessation de la souffrance qui s'obtient par la disparition des désirs et attachements ;
+
+- La vérité de la voie (Noble Octuple Voie) menant à la cessation de la souffrance en particulier par la méditation, pour atteindre le nirvana (l'état de non-renaissance) et donc devenir un bouddha.
+
+Il passa les 40 dernières années suivantes de sa vie à prêcher le dharma (enseignement bouddhiste) de village en village, se retirant dans un monastère pendant la saison des pluies. A sa mort, il fut incinéré par ses disciples qui diffusèrent son enseignement.
 		</p>
-		<h3>Source : <a href="#">blabla</a>
+		<h3>Source : <a href="http://visionsdinde.free.fr/index.php/articles-visions-dinde/261-le-bouddhisme-en-inde.html">visiondinde.free.fr</a>
 		</h3>
 	</div>
 	<div class="element">
