Ajout d'un article et d'une photo

--- a/inde.html
+++ b/inde.html
@@ -60,11 +60,18 @@
 	</div>
 	<div class="element">
 		<h2>
-			Article 3 !! //Anais
+			Le drapeau indien
 		</h2>
 		<p>
-			Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.
+			Le Mahatma Gandhi propose un drapeau au Congrès national indien en 1921. Le drapeau dessiné par Pingali Venkayya, un agriculteur de Machilipatnam3,4, présente à l'origine deux couleurs, rouge pour les hindous et vert pour les musulmans, et au centre se trouve un rouet (charkha), symbolisant l'objectif du Mahatma de pousser les Indiens à l'autosuffisance en fabriquant leurs propres tissus. Le dessin est ensuite modifié pour inclure une bande blanche qui symbolise les autres communautés religieuses.
+
+En 1931, l'ordre et la signification des couleurs sont modifiés : le safran, le blanc et le vert sont choisis, représentant respectivement le courage et le sacrifice, la vérité et la paix, la foi et la courtoisie5.
+
+Quelques jours avant l'Indépendance de l'Inde le 15 août 1947, l'Assemblée constituante décide d'adopter un drapeau acceptable par tous les partis et toutes les communautés1. Une version modifiée du drapeau du Congrès est choisie, dans laquelle les trois couleurs safran, blanc et vert sont conservées mais le charka est remplacé par le chakra d'Ashoka, représentant la roue éternelle de la loi. Sarvepalli Radhakrishnan, qui devient plus tard le premier Vice-président de l'Inde, déclare :
+
+    « Bhagwa, la couleur safran, exprime la renonciation et le désintéressement. Nos leaders doivent être indifférents aux gains matériels et se dédier entièrement à leur travail. Le blanc au centre est la lumière, le chemin de la vérité qui guide notre conduite. Le vert montre notre relation avec le sol, notre relation avec la flore de laquelle dépend toute autre vie. Le chakra d’Ashoka au centre est la roue de la loi de dharma. Vérité ou satya, dharma ou vertu doivent être les principes de ceux qui travaillent sous ce drapeau. De plus la roue exprime le mouvement. La mort est dans la stagnation. La vie est dans le mouvement. L’Inde ne devrait plus résister au changement, elle doit bouger et aller de l’avant. La roue représente la dynamique d’un changement paisible»2. »
 		</p>
+			<img src="inde9.png" width = "200px"/>
 		<h3>Source : <a href="#">blabla</a>
 		</h3>
 	</div>
