changement de la partie edito

--- a/inde.html
+++ b/inde.html
@@ -25,15 +25,11 @@
 -->
 	<div id="edito">
 		<h2>
-			Edito
+			L'Inde
 		</h2>
 		<p>
-			Lorem ipsum dolor sit amet consect etuer adipi scing elit sed diam nonummy nibh euismod tinunt ut laoreet dolore magna aliquam erat volut. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi.
+			L'Inde est le deuxième pays le plus peuplé et le septième pays le plus grand du monde. Le littoral indien s'étend sur plus de sept mille kilomètres. Le pays a des frontières communes avec le Pakistan à l'ouest, la Chine, le Népal, et le Bhoutan au nord et au nord-est, le Bangladesh et la Birmanie à l'est. Sur l'océan Indien, l'Inde est à proximité des Maldives au sud-ouest, du Sri Lanka et de l'Indonésie au sud-est. L'Inde revendique également une frontière avec l'Afghanistan au nord-ouest.
 		</p>
-		<p>
-			Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
-		</p>
-		
 	</div>
 	
 	<div class="element">
