--- a/inde.html
+++ b/inde.html
@@ -94,10 +94,17 @@
 	</div>
 	<div class="element">
 		<h2>
-			Article 6 !! // Rémi
+			Le temple du Lotus
 		</h2>
 		<p>
-			Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.
+			Le Temple du Lotus, sis à Bahapur, un faubourg sud de Delhi, en Inde, est une des 8 principales maisons d’adoration bahá’ies. Il est considéré comme le 'Temple-mère' d’Asie du Sud. C’est un monument qui se veut ouvert à toutes les croyances. Indépendamment de son caractère religieux, cette remarquable œuvre architecturale a reçu de nombreux prix.
+
+Conçue comme fleur de lotus à peine entrouverte, l’œuvre comprend 27 pétales sur 9 côtés (chiffre symbolique important pour la foi bahá’ie), recouverts de marbre. L’intérieur est principalement un vaste auditoire permettant des assemblées de plus de 1 300 personnes. Seules les saintes écritures de la foi bahá’ie et des autres Révélations divines antérieures peuvent être publiquement lues ou récitées dans cette grande salle de prière. Aucun rituel religieux ne peut y être accompli. Tout y porte à la méditation silencieuse personnelle. Comme se dessinent certaines obédiences qui peuplent l’Inde telles Auroville, le temple se veut ouvert à toutes les religions.
+
+Sous les pétales extérieurs se trouvent les pièces annexes : réception, bibliothèque, salles d’expositions ou de conférences. Autour du bâtiment, neuf pièces d’eau recréent le cadre habituel du lotus, une fleur d’étang. Des jardins à la Le Nôtre conduisent au Temple légèrement surélevé, donnant au bâtiment une perspective fort dégagée.
+
+Depuis son ouverture en décembre 1986 le Temple du Lotus reçoit de très nombreux visiteurs, indiens et étrangers, touristes comme pèlerins, hommes et femmes de croyances et religions différentes. Il reçoit en moyenne quatre millions de visiteurs par an, surtout durant la saison des festivals hindous.
+
 		</p>
 		<h3>Source : <a href="#">blabla</a>
 		</h3>
