ajout image sur article

--- a/inde.html
+++ b/inde.html
@@ -96,6 +96,7 @@
 		<h2>
 			Le temple du Lotus
 		</h2>
+<img src="lotus.jpg" width = "200px"/> 
 		<p>
 			Le Temple du Lotus, sis à Bahapur, un faubourg sud de Delhi, en Inde, est une des 8 principales maisons d’adoration bahá’ies. Il est considéré comme le 'Temple-mère' d’Asie du Sud. C’est un monument qui se veut ouvert à toutes les croyances. Indépendamment de son caractère religieux, cette remarquable œuvre architecturale a reçu de nombreux prix.
 
