J'ai ajouté une image dans le html

--- a/inde.html
+++ b/inde.html
@@ -99,6 +99,7 @@ Le Festival of Colours veut reproduire cette tradition et cette atmosphère indi
 
 „… Manifestement, la fête Holi remplit une volonté, indépendante de religions, de vivre une existence plus authentique …“ (Süddeutsche Zeitung)
 		</p>
+		<img src="/export/src/aurelie.richard/git/TP3/TP3/holi.jpg"/>
 		<h3>Source : <a href="http://holifestival.com/fr/fr/esprits-holi">holifestival.com</a>
 		</h3>
 	</div>
