ajout de l'article d'Eric

--- a/inde.html
+++ b/inde.html
@@ -68,7 +68,6 @@ Quelques jours avant l'Indépendance de l'Inde le 15 août 1947, l'Assemblée co
     « Bhagwa, la couleur safran, exprime la renonciation et le désintéressement. Nos leaders doivent être indifférents aux gains matériels et se dédier entièrement à leur travail. Le blanc au centre est la lumière, le chemin de la vérité qui guide notre conduite. Le vert montre notre relation avec le sol, notre relation avec la flore de laquelle dépend toute autre vie. Le chakra d’Ashoka au centre est la roue de la loi de dharma. Vérité ou satya, dharma ou vertu doivent être les principes de ceux qui travaillent sous ce drapeau. De plus la roue exprime le mouvement. La mort est dans la stagnation. La vie est dans le mouvement. L’Inde ne devrait plus résister au changement, elle doit bouger et aller de l’avant. La roue représente la dynamique d’un changement paisible»2. »
 		</p>
 			<img src="inde9.png" width = "200px"/>
-		<h3>Source : <a href="#">blabla</a>
 		</h3>
 	</div>
 
@@ -105,7 +104,19 @@ Quelques jours avant l'Indépendance de l'Inde le 15 août 1947, l'Assemblée co
 		<h3>Source : <a href="#">blabla</a>
 		</h3>
 	</div>
+	<div class="element">
+		<h2>
+			Cuisine indienne
+		</h2>
+		<p>
+			La cuisine indienne recouvre une grande variété de cuisines régionales d'Inde. Elles sont influencées par les épices, herbes, fruits et légumes que l'on trouve dans chaque région du pays mais également par la religion et l'histoire.
 
+Ainsi, le végétarisme est très répandu dans la société indienne, majoritairement d'obédience hindoue, souvent résultat d'éthiques religieuses brahmaniques, jaïnes ou sikhes. La consommation de bovin ou de porc, de rapaces, etc.1, est limitée par les interdits de l'hindouisme et de l'islam. La cuisine indienne est influencée par les interactions avec la Perse et la présence européenne dans le sous-continent.
+
+La cuisine indienne s'est répandue dans le monde avec les migrations des Indiens, notamment dans l'Océan Indien, l'Europe, l'Amérique du Nord et les Antilles où elle a été enrichies d'apports nouveaux.
+		</p>
+		<img src="cuisine.jpg" width="200px" />
+	</div>
 
 	<div id="footer">
 		Copyright © Site name, 20XX
