modification lien source

--- a/inde.html
+++ b/inde.html
@@ -107,7 +107,7 @@ Sous les pétales extérieurs se trouvent les pièces annexes : réception, bibl
 Depuis son ouverture en décembre 1986 le Temple du Lotus reçoit de très nombreux visiteurs, indiens et étrangers, touristes comme pèlerins, hommes et femmes de croyances et religions différentes. Il reçoit en moyenne quatre millions de visiteurs par an, surtout durant la saison des festivals hindous.
 
 		</p>
-		<h3>Source : <a href="#">http://fr.wikipedia.org/wiki/Temple_du_Lotus</a>
+		<h3>Source : <a href="http://fr.wikipedia.org/wiki/Temple_du_Lotus">Wikipedia</a>
 		</h3>
 	</div>
 
