--- a/chine.html
+++ b/chine.html
@@ -38,13 +38,51 @@ Chine
 	
 	<div class="element"> <!-- Mariannne -->
 		<h2>
-Marianne
+Marianne : "JO-2022: pour Pékin et Almaty, les dés sont jetés "
 		</h2>
 		<img src="ecu.jpg" alt="Ecureuil">
 		<p>
-			Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.
+			Almaty et son projet compact mais une économie très liée au pétrole, Pékin avec un projet éclaté et sa dépendance à la neige artificielle: les deux candidats aux JO d'hiver 2022 ont tenté de convaincre mardi les membres du CIO, à moins de deux mois de l'élection de la ville hôte.
+
+Première à se présenter devant les 85 membres (sur 112) du CIO à Lausanne, la délégation d'Almaty, conduite par le Premier ministre Karim Massimov, a d'abord délivré un message vidéo de son président Noursoultan Nazarbaïev, à la tête depuis plus de vingt ans de cette puissance pétrolière frontalière de la Chine et de la Russie.
+
+"Tous les membres du CIO ont été absolument satisfaits de cette présentation. Nous avons répondu à toutes les questions, essentiellement techniques", a assuré le maire d'Almaty, Akhmetzhan Yessimov.
+
+"Nous voulons offrir un concept tout nouveau, qui s'appuie sur l'Agenda-2020, a détaillé Andrey Kryukov, vice-président du comité de candidature. Aucun site de compétition ne se trouve à plus de 33 km du centre de la ville et 70% de nos sites sont prêts".
+
+Almaty s'appuie sur de nombreuses infrastructures existantes ou rénovées en 2011 pour les Jeux asiatiques d'hiver, telles que la station de ski de Shymbulak, construite en 1950, et le Palais des sports Baluan Sholak, édifié en 1967.
+
+"Cela offre une efficacité en termes de coûts et d'exploitation, avec un impact environnemental bas", juge la commission d'évaluation du CIO, qui met en avant "les abondantes chutes de neige naturelle qui réduisent les besoins en eau et en énergie nécessaires pour la neige artificielle".
+
+- Question de la neige à Pékin -
+
+Un déficit en neige naturelle est en revanche criant dans la station de Zhangjiakou, à 200 km au nord de Pékin, où doivent avoir lieu les épreuves de ski et où les chutes de neige n'y sont que d'un mètre par an.
+
+"La question de la neige a été posée, mais nous sommes confiants dans le fait que nous avons des ressources en eau suffisantes pour satisfaire les besoins des Jeux", a réagi Yang Lan, chargée de la planification pour Pékin 2022.
+
+"L'eau que nous utiliserons pour la fabrication de neige (artificielle) représente environ 1% des ressources annuelles en eau de la région. Nous pensons donc que l'impact sur l'environnement est très contrôlable", a-t-elle ajouté.
+
+Autre épine dans le dossier chinois, la piètre qualité de l'air. "Nous avons adopté un plan d'action très solide sur la période 2013-2017 pour améliorer la qualité de l'air avec 130 mds USD investis", a indiqué le maire de Pékin, Wang Anshun, confiant pour avoir "une qualité de l'air conforme aux normes de l'OMS".
+
+- Des budgets scrutés -
+
+Pékin qui mise sur un projet éclaté, propose "un concept régional qui vise à développer un marché des sports d'hiver au profit de plus de 300 millions de personnes vivant dans le nord de la Chine", selon le CIO.
+
+Seules villes en lice après le retrait de plusieurs métropoles inquiètes de la démesure et du coût faramineux (près de 50 mds USD) des derniers jeux de Sotchi en 2014, Almaty comme Pékin présentent des budgets étonnamment bas.
+
+Ainsi la capitale kazakhe table sur un budget de 3,6 mds USD (3,2 mds EUR), alors que Pékin, qui avait organisé des JO d'été en 2008 dispendieux, annonce un budget moindre de 3,1 mds USD (2,8 mds EUR).
+
+Le budget global de Pékin, "est inférieur à celui des précédents Jeux. L'objectif de dépenses du comité d'organisation nécessite une discipline rigoureuse", relève le CIO.
+
+Concernant Almaty, "le bugdet est réalisable en l'absence de toute perturbation économique", estime la commission du CIO, relevant comme risque "le niveau bas des prix du pétrole".
+
+"Le budget des Jeux est absolument solide. Il représente 0,3% de notre PNB (produit national brut, ndlr), notre économie est très forte", a rétorqué M. Kryukov, ajoutant que face au risque financier, "nous disposons d'un fonds de stabilisation nationale de 75 mds USD".
+
+Le choix de la ville hôte des JO d'hiver 2022 interviendra le 31 juillet à Kuala Lumpur lors de la 128e session du CIO.
+
+09/06/2015 20:28:11 - Lausanne (AFP) - Par Eric BERNAUDEAU - © 2015 AFP
 		</p>
-		<h3>Source : <a href="#">blabla</a>
+		<h3>Source : <a href="http://www.lepoint.fr/sport/jo-2022-almaty-et-pekin-veulent-convaincre-le-cio-09-06-2015-1934879_26.php">Le point</a>
 		</h3>
 	</div>
 
