ajout photo et texte

--- a/chine.html
+++ b/chine.html
@@ -84,12 +84,13 @@ Marianne
 
 	<div class="element"> <!-- Cecile -->
 		<h2>
-			Article 5 !!
-		</h2>
+			Le nouvel an Chinois</h2>
 		<p>
-			Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.
+		2015 est l'année de la CHÈVRE DE BOIS qui a débuté le 19 février. Celle du SINGE DE FEU commencera quant à elle le 8 février 2016. Le Nouvel An lunaire ou Nouvel An Chinois 农历新年 (Nongli Xinnian) aussi appelé Fête du printemps 春节(chunjié) ou Fête du Têt au Vietnam est le festival le plus important pour les communautés asiatiques à travers le monde entier. Le terme Nongli Xinnian signifie littéralement "Nouvel an du calendrier agricole" car il se célèbre suivant le calendrier chinois qui est luni-solaire. Cette fête est un moment dont on profite en prenant des vacances et en se réunissant en famille. Les festivités s'étendent sur quinze jours, entre la nouvelle lune et la pleine lune.	
 		</p>
-		<h3>Source : <a href="#">blabla</a>
+<a href="http://www.chine-informations.com/fun/signechinois/index.php?day=27&month=9&year=1994">Determinez votre signe !</a> 
+<img src="dragon.jpg"/>
+		<h3>Source : <a href="http://www.chine-informations.com/nouvel-an-chinois/">Chine Informations </a>
 		</h3>
 	</div>
 
