julie devient julie a1

--- a/chine.html
+++ b/chine.html
@@ -110,7 +110,7 @@ Les guesthouses de P√©kin proposent pour la plupart des excursions sur les diff√
 		</h3>
 	</div>
 
-	<div class="element"> <!-- Julia -->
+	<div class="element"> <!-- Julie (A1) -->
 		<h2>
 			Article 5 !!
 		</h2>
