Ajout de l'image chien_coupe_carre.jpg

--- a/japon.html
+++ b/japon.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="fr" lang="fr">
 <head>
 	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-	<title>Comparatif</title>
+	<title>Japon</title>
 	
 	<link rel="stylesheet" href="style.css" type="text/css" media="screen" />
 </head>
@@ -116,6 +116,7 @@
 		<h2>
 			Au Japon, les chiens à la mode sont coiffés en « cube »
 		</h2>
+		<img src="chien_coupe_carre.jpg"/>
 		<p>
 			C'est la nouvelle mode au Japon : pour être tendance, les toutous arborent désormais la coupe "au carré". Littéralement cette fois...
 
