--- a/inde.html
+++ b/inde.html
@@ -11,7 +11,7 @@
 <div id="container">
 	<div id="header">
 		<h1>
-			Site name
+			L'Inde, berceau de la couleur et de l'épice
 		</h1>
 	</div>
 <!--	<div id="navigation">
@@ -28,7 +28,7 @@
 			L'Inde
 		</h2>
 		<p>
-			L'Inde est le deuxième pays le plus peuplé et le septième pays le plus grand du monde. Le littoral indien s'étend sur plus de sept mille kilomètres. Le pays a des frontières communes avec le Pakistan à l'ouest, la Chine, le Népal, et le Bhoutan au nord et au nord-est, le Bangladesh et la Birmanie à l'est. Sur l'océan Indien, l'Inde est à proximité des Maldives au sud-ouest, du Sri Lanka et de l'Indonésie au sud-est. L'Inde revendique également une frontière avec l'Afghanistan au nord-ouest.
+			L'Inde est le deuxième pays le plus peuplé et le septième pays le plus grand du monde. Le littoral indien s'étend sur plus de sept mille kilomètres. Le pays a des frontières communes avec le Pakistan à l'ouest, la Chine, le Népal, et le Bhoutan au nord et au nord-est, le Bangladesh et la Birmanie à l'est. Sur l'océan Indien, l'Inde est à proximité des Maldives au sud-ouest, du Sri Lanka et de l'Indonésie au sud-est. L'Inde revendique également une frontière avec l'Afghanistan au nord-ouest. 
 		</p>
 	</div>
 	
@@ -114,7 +114,7 @@ Le Festival of Colours veut reproduire cette tradition et cette atmosphère indi
 
 „… Manifestement, la fête Holi remplit une volonté, indépendante de religions, de vivre une existence plus authentique …“ (Süddeutsche Zeitung)
 		</p>
-		<img src="/export/src/aurelie.richard/git/TP3/TP3/holi.jpg"/>
+		<img src="holi.jpg"/>
 		<h3>Source : <a href="http://holifestival.com/fr/fr/esprits-holi">holifestival.com</a>
 		</h3>
 	</div>
