--- a/chine.html
+++ b/chine.html
@@ -28,12 +28,14 @@ Chine
 			Edito
 		</h2>
 		<p>
-			Lorem ipsum dolor sit amet consect etuer adipi scing elit sed diam nonummy nibh euismod tinunt ut laoreet dolore magna aliquam erat volut. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi.
+			Alors que les commentateurs ont les yeux braqués sur ce qui se passe en Europe et aux Etats-Unis, la chute des marchés obligataires européens paraît mystérieuse. Dans un marché désordonné, le taux de rendement exigé des Bunds allemands a été multiplié par quatre en trois semaines. C’est à un véritable sell-off que l’on a assisté et que l’on assiste encore. Les périphériques européens et la France trinquent également bien sûr, mais ce n’est que péripétie, et contagion, l’ancrage, le pivot, ce sont les  Bunds. Les détenteurs de portefeuilles obligataires commencent déjà à perdre quelques pourcent, ce qui semble un paradoxe, compte tenu des achats de la BCE dans le cadre de ses opérations de Quantitative Easing.
 		</p>
 		<p>
-			Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
+		Les raisons invoquées pour commenter la baisse des fonds d’Etat -vous remarquez que nous ne disons pas, pour expliquer- les raisons invoquées vont de la perspective de hausse des taux aux USA, à la situation grecque, en passant par le frémissement de la conjoncture européenne. Certains, parmi les raisons invoquées, ajoutent les corrélations, car ils ont remarqué qu’aux USA, lors des QE, les taux avaient monté et non pas baissé, comme on aurait pu s’y attendre.
 		</p>
-		
+		<p>
+Tout cela est de l’ordre du commentaire, des amalgames, et ne paraît guère convaincant, car ce qui manque, c’est le lien logique, dialectique, qui relierait ces remarques aux ventes sur le marché.</p>
+<p>De la même manière que le bas niveau des taux d’intérêts a des causes réelles, non magiques, et que les commentaires ne font qu’effleurer, la remontée des taux a pour origine une modification dans l’équilibre mondial. Et cette modification doit être importante, brutale, non anticipée ou non comprise.</p>
 	</div>
 	
 	<div class="element"> <!-- Mariannne -->
