Ajout d'une image

--- a/chine.html
+++ b/chine.html
@@ -40,7 +40,7 @@ Chine
 		<h2>
 Marianne : "JO-2022: pour Pékin et Almaty, les dés sont jetés "
 		</h2>
-		<img src="ecu.jpg" alt="Ecureuil">
+		<img src="jo.jpg" alt="Le comité, les représentants d'Almaty, et ceux de Pekin">
 		<p>
 			Almaty et son projet compact mais une économie très liée au pétrole, Pékin avec un projet éclaté et sa dépendance à la neige artificielle: les deux candidats aux JO d'hiver 2022 ont tenté de convaincre mardi les membres du CIO, à moins de deux mois de l'élection de la ville hôte.
 
