modif de l'article d'eva

--- a/chine.html
+++ b/chine.html
@@ -187,9 +187,9 @@ Le principal féculent d'accompagnement est :
 
 - Dans la Chine du sud : le riz cuit à la vapeur sans assaisonnement ; il doit être légèrement collant, il est souvent cuit la veille de la dégustation.
 
-- Dans la Chine du Nord : les pâtes, les crêpes ou les pains à la vapeur à base de farine de blé.
+- Dans la Chine du Nord : les pâtes, les crêpes ou les pains à la vapeur à base de farine de blé.</p>
 			
-		<h3>Source : <a href="#">http://www.cctv.com/program/journaldelaculture/20090224/107363.shtml</a>
+		<h3>Source : <a href="http://www.cctv.com/program/journaldelaculture/20090224/107363.shtml">cctv</a>
 		</h3>
 	</div>
 
