--- a/inde.html
+++ b/inde.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="fr" lang="fr">
 <head>
 	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-	<title>Comparatif</title>
+	<title>L'Inde</title>
 	
 	<link rel="stylesheet" href="style.css" type="text/css" media="screen" />
 </head>
